src/app/reservations/pages/session-screen/session-screen.component.scss
.card {
    border: 1px solid #ddd;
    border-radius: 0;
    overflow: hidden;
    margin: 15px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
}

.card-content {
    padding-top: 15px;
    display: flex;
    flex-direction: row; // Always display elements in a column 
    align-items: flex-start; // Align to the left 
    text-align: left; // Align text to the left 
}

.shopping-cart-alignment {
    margin: 15px;
    width: 100%
}

.back-button {
    background: none;
    border: none;
    color: rgb(18, 126, 189);
    cursor: pointer;
}

.back-icon {
    width: 15px;
    height: 15px;
    margin-right: 5px;
}

